# autofx

./: .gitignore  README.md  pyproject.toml
autofx/: __init__.py  agent.py  cli.py  config.py  gif.py  renderer.py  timing.py  tools.py
examples/: blue-flames.glsl  energy-ball.glsl  explosion.glsl  heal.glsl  magic-flames.glsl  particle-burst.glsl
skills/autofx/: SKILL.md
