[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofx"
version = "0.1.0"
description = "AI-powered visual effects animation generator using GLSL shaders"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Peter" }
]
keywords = ["vfx", "animation", "shader", "glsl", "gif", "game-dev", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "moderngl>=5.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
autofx = "autofx.cli:main"

[project.urls]
Homepage = "https://github.com/peter/autofx"
Repository = "https://github.com/peter/autofx"

[tool.hatch.build.targets.wheel]
packages = ["autofx"]
